--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:h2:mem:testdb
+
+#
+# Good for production!
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.initialization-mode=never
